@@ -1,0 +1,8 @@
+package body Loop_Optimization3_Pkg is
+
+  function F (n : Integer) return Integer is
+  begin
+    return n;
+  end;
+
+end Loop_Optimization3_Pkg;
