@@ -1,0 +1,5 @@
+package Loop_Optimization3_Pkg is
+
+  function F (n : Integer) return Integer;
+
+end Loop_Optimization3_Pkg;
