@@ -1672,7 +1672,7 @@ simplify_using_outer_evolutions (struct loop *loop, tree expr)
 
 /* Returns true if EXIT is the only possible exit from LOOP.  */
 
-static bool
+bool
 loop_only_exit_p (const struct loop *loop, const_edge exit)
 {
   basic_block *body;
